--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="/dist/output.css" rel="stylesheet" />
     <title>Dhiraj Dalvi</title>
   </head>
   <body theme="dark">
